Fix Spreadsheet sidebar description spacing
The ul tag added extra padding which looked off

--- a/assets/src/scss/editorOverrides.scss
+++ b/assets/src/scss/editorOverrides.scss
@@ -248,7 +248,6 @@ input.describe[type=text][data-setting=caption] {
 // Sidebar help texts
 .components-base-control__help,
 .components-form-token-field__help,
-.sidebar-blocks-help ul li,
 .FieldHelp {
   font-size: 13px;
   line-height: 1.5;
